# dataslots

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  publish.yml  scorecard.yml  tests.yml
dataslots/: __init__.py
examples/: dataclass_validators.py
src/dataslots/: __init__.py
tests/: conftest.py  test_backport.py  test_dataslots.py  test_descriptor.py  test_pickle.py
