[tool.setuptools_scm]
local_scheme = "node-and-timestamp"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"


[tool.pyright]
include = ["src", "tests"]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportUntypedClassDecorator = "error"