[metadata]
name = dataslots
description = Decorator to add __slots__ in dataclasses
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Adrian Stachlewski
author_email = starhel.github@gmail.com
url = https://github.com/starhel/dataslots
project_urls =
    Source = https://github.com/starhel/dataslots
    Tracker = https://github.com/starhel/dataslots/issues
    Documentation = https://github.com/starhel/dataslots
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
keywords = dataslots slots dataclasses

[options]
python_requires = >=3.7
install_requires =
    typing_extensions>=3.7.4;python_version<"3.8"
package_dir =
    =src
packages = find:

[options.packages.find]
where=src
