[metadata]
name = dataslots
description = Decorator to add __slots__ in dataclasses
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Adrian Stachlewski
author_email = starhel.github@gmail.com
url = https://github.com/starhel/dataslots
project_urls =
    Source = https://github.com/starhel/dataslots
    Tracker = https://github.com/starhel/dataslots/issues
    Documentation = https://github.com/starhel/dataslots
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Typing :: Typed
keywords = dataslots slots dataclasses

[options]
python_requires = >=3.7
install_requires =
    typing_extensions>=4.2.0;python_version<"3.11"
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[options.package_data]
dataslots = py.typed